[package]
name = "rethdb-dexsync"
version = "0.0.1"
publish = false
edition = "2021"
license = "Apache-2.0 OR MIT"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6"
lazy_static = "1.5"
bincode = "1.3"
thiserror = "1"
tracing = "0.1"

reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev="9c8360e" }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev="9c8360e" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev="9c8360e",  features = ["asm-keccak"]}
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev="9c8360e" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", rev="9c8360e" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev="9c8360e" }
reth-node-types = { git = "https://github.com/paradigmxyz/reth", rev="9c8360e" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", rev="9c8360e" }
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", rev="9c8360e" }
reth-stages = { git = "https://github.com/paradigmxyz/reth", rev="9c8360e" , features = ["test-utils"]}
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", rev="9c8360e" }

alloy-primitives = "0.8"
alloy-sol-types = "0.8"
alloy = { version = "0.4", features = ["rpc-types", "asm-keccak", "eips"] }

serde = { version = "1", features = ["derive"] }


[dev-dependencies]
tracing-subscriber = "0.3"

pool-sync = { git="https://github.com/Zacholme7/PoolSync", rev="29a6e5a" }
amms = { git="https://github.com/m1stoyanov/amms-rs", rev="3840a00"}
alloy = { version = "0.4.2", features = ["provider-http"] }
uniswap-v3-sdk = { version = "2.1.0", features = ["extensions", "std"] }
uniswap-sdk-core = "3.0.0"

criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "univ2_bench"
harness = false